--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,6 +4,8 @@
         <title> BDS ENTERPRISE </title>
       </head>
       <body>
+            <h1>My First Webpage</h1>
+            <h2>Written with a little guidance from Moringa School</h2>
             <p>Hello there!</p>
             <p>Welcome to BDS ENTERPRISE website</p>
       </body>
