--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -8,5 +8,13 @@
             <h2>Written with a little guidance from Moringa School</h2>
             <p>Hello there!</p>
             <p>Welcome to BDS ENTERPRISE website</p>
+
+            <p>Here are some things I'm going to learn about coding:</p>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>And a lot more!</li>
+            </ul>
       </body>
   </html>
