--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,10 +2,11 @@
   <html>
       <head>
         <title> BDS ENTERPRISE </title>
+        <link href="css/style.css" rel="stylesheet" type="text/css">
       </head>
       <body>
             <h1>My First Webpage</h1>
-            <h2>Written with a little guidance from Moringa School</h2>
+            <h2>Written with a little guidance from <em> Moringa School </em> </h2>
             <p>Hello there!</p>
             <p>Welcome to BDS ENTERPRISE website</p>
 
@@ -16,5 +17,7 @@
               <li>JavaScript</li>
               <li>And a lot more!</li>
             </ul>
+            <p>check out <a href="http://moringaschool.com/">moringa school</a> It's a great place to learn website development skills</p>
+            <p>Here is a link to my <a href="file:///home/henry/Downloads/xampp/htdocs/mwihoko/index.html"> second website</a>.</p>
       </body>
   </html>
